<resources>
    <string name="app_name">Recipe</string>
    <string name="action_settings">Settings</string>
    <string name="tvTitle">Bruschetta</string>

    <string name="description">Recipe Image</string>
    <string name="btnRecipe">View Recipe</string>
    <string name="tvIngredients">Ingredients</string>
    <string name="tvIngredients1">4 plum tomatoes</string>
    <string name="tvIngredients2">6 basil leaves</string>
    <string name="tvIngredients3">3 garlic cloves, chopped</string>
    <string name="tvIngredients4">3 TB olive oil</string>
    <string name="tvDirections">Directions</string>
    <string name="txtMix">Combine the ingredients and add salt to taste. Top French bread slices with mixture.</string>
    <string name="title_activity_recipe">Recipe</string>
</resources>